Fixed HTML/CSS workbox alignment bug in Opera
Opera renders the text for the page at a greater width than other
browsers do, which was pushing the toggle selectors and legends
out of the figure effects box ("workbox").  Once the box width
was corrected, it became apparent that Opera was not rendering the
text in the expected place, so a "vertical-align:top" declaration
was added as well.

--- a/chaos.css
+++ b/chaos.css
@@ -396,13 +396,13 @@ div.shiftbox img.black{
   background-color:#111111;
   border:4px ridge #8A08CC;
   height:75px;
-  width:180px;
 }
 #workbox > canvas {
   background-color:#303030;
 }
 #workbox > div {
   display:inline-block;
+	vertical-align:top;
 }
 #workbox > div > div:nth-of-type(2n-1){
   clear:both;
